# ZeroBot

./: .gitignore  LICENSE  README.md  pylintrc  pyproject.toml  requirements.txt  setup.cfg  tox.ini  zerobot.py
ZeroBot/: __init__.py  config.py  core.py  database.py  module.py  util.py
ZeroBot/common/: __init__.py  abc.py  command.py  enums.py  exceptions.py
ZeroBot/feature/: chat.py  counter.py  encode.py  magic8ball.py  markov.py  obit.py  quote.py
ZeroBot/feature/quote/: classes.py  commands.py  database.py  feature.py
ZeroBot/protocol/: context.py
ZeroBot/protocol/discord/: classes.py  protocol.py
ZeroBot/protocol/irc/: channel.py  classes.py  message.py  protocol.py  server.py  user.py  util.py
src/ZeroBot/: __init__.py  __main__.py  config.py  context.py  core.py  database.py  exceptions.py  module.py  util.py
src/ZeroBot/common/: __init__.py  abc.py  command.py  enums.py  util.py
src/ZeroBot/feature/: chat.py  counter.py  encode.py  magic8ball.py  markov.py  obit.py
src/ZeroBot/feature/quote/: classes.py  database.py  feature.py
src/ZeroBot/protocol/: context.py
src/ZeroBot/protocol/discord/: classes.py  protocol.py  util.py
src/ZeroBot/protocol/irc/: classes.py  protocol.py  util.py
src/ZeroBot/sql/schema/: chat.sql  core.sql  magic8ball.sql  markov.sql  obit.sql  quote.sql
src/zerobot/: __main__.py  command.py  config.py  context.py  core.py  database.py  exceptions.py  module.py  util.py
src/zerobot/common/: __init__.py  command.py  enums.py
src/zerobot/feature/: chat.py  counter.py  encode.py  magic8ball.py  markov.py  obit.py
src/zerobot/feature/quote/: classes.py  commands.py  feature.py
src/zerobot/protocol/discord/: classes.py  protocol.py  util.py
src/zerobot/protocol/irc/: classes.py  protocol.py
src/zerobot/sql/schema/: counter.sql
