[build-system]
requires = ['setuptools>=61.0.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'ZeroBot'
description = 'A modular, multi-protocol bot for amusement and utility.'
version = '0.6.0'
requires-python = '>=3.8'
readme = 'README.md'
license.file = 'LICENSE.txt'
authors = [
    { name = 'Alex "ZeroKnight" George', email = 'xzeroknightx@gmail.com' },
]
dependencies = [
    'aiosqlite',
    'appdirs',
    'discord.py>=1.5.0',
    'pydle>=0.9.4',
    'python-dateutil',
    'toml',
]

[project.optional-dependencies]
dev = ['black>=22.1.0', 'flake8', 'isort>=5.0.0', 'pytest>=6.0']

[project.urls]
Repository = 'https://github.com/ZeroKnight/ZeroBot'

[project.scripts]
zerobot = 'ZeroBot.__main__:main'

[tool.black]
line-length = 120
preview = true
exclude = '''
/(
    tests/
)/
'''

[tool.isort]
profile = 'black'
line_length = 120

[tool.pytest.ini_options]
minversion = '6.0'
testpaths = ['tests']
addopts = ['-ra']
