[build-system]
requires = ['setuptools>=61.0.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'ZeroBot'
description = 'A modular, multi-protocol bot for amusement and utility.'
version = '0.6.0'
requires-python = '>=3.10'
readme = 'README.md'
license.file = 'LICENSE.txt'
authors = [
    { name = 'Alex "ZeroKnight" George', email = 'xzeroknightx@gmail.com' },
]
dependencies = [
    'aiosqlite',
    'appdirs',
    'discord.py>=2.0',
    'pydle>=0.9.4',
    "python-dateutil ; python_version < '3.11'",
    'toml',
]

[project.optional-dependencies]
dev = ['ruff', 'pytest>=6.0']

[project.urls]
Repository = 'https://github.com/ZeroKnight/ZeroBot'

[project.scripts]
zerobot = 'ZeroBot.__main__:main'
zerobotdb = 'ZeroBot.__main__:edit_db'

[tool.setuptools.package-data]
ZeroBot = ['sql/**/*.sql']

[tool.ruff]
src = ['src']
line-length = 120
ignore-init-module-imports = true # TBD: Maybe just be explicit?

[tool.ruff.format]
preview = true

# TBD: docstring convention
# TODO: Enable ANN when we begin doing proper typing
[tool.ruff.lint]
preview = true
extend-select = [
    'ARG',
    'ASYNC',
    'A',
    'B',
    'C',
    'C90',
    'DTZ',
    'FBT',
    'I',
    'N',
    'PIE',
    'PLE',
    'PLR1704', # redefined-argument-from-local
    'PLR6',
    'PLW',
    'PTH',
    'RET',
    'RUF',
    'S',
    'SIM',
    'T10',
    'T20',
    'TRY',
    'UP',
    'YTT',
]

ignore = [
    'A003', # I don't think this is a big deal
    'S311', # I'm not using random for crypto...
]

extend-safe-fixes = ['F401', 'I', 'RET', 'RUF005', 'RUF013', 'SIM', 'UP']

[tool.ruff.lint.per-file-ignores]
'test_*.py' = ['ANN', 'S101']

[tool.ruff.lint.isort]
required-imports = ['from __future__ import annotations']

[tool.pytest.ini_options]
minversion = '6.0'
testpaths = ['tests']
addopts = ['-ra']
