[build-system]
requires = ['setuptools>=61.0.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'zerobot'
description = 'A modular, multi-protocol bot for amusement and utility.'
version = '0.6.0'
requires-python = '>=3.10'
readme = 'README.md'
license.file = 'LICENSE.txt'
authors = [
    { name = 'Alex "ZeroKnight" George', email = 'xzeroknightx@gmail.com' },
]
dependencies = [
    'aiosqlite',
    'discord.py>=2.0',
    'platformdirs',
    'pydle>=0.9.4',
    "python-dateutil ; python_version < '3.11'",
    'toml',
]

[project.optional-dependencies]
dev = ['ruff>=0.5.0', 'pytest>=6.0']

[project.urls]
Repository = 'https://github.com/ZeroKnight/ZeroBot'

[project.scripts]
zerobot = 'ZeroBot.__main__:main'
zerobotdb = 'ZeroBot.__main__:edit_db'

[tool.setuptools.package-data]
zerobot = ['sql/**/*.sql']

[tool.ruff]
required-version = '>=0.5.0'
src = ['src']
line-length = 120

[tool.ruff.format]
preview = true
docstring-code-format = true

# TBD: docstring convention
# TODO: Enable ANN when we begin doing proper typing
[tool.ruff.lint]
preview = true
explicit-preview-rules = true
extend-select = [
    'ARG',
    'ASYNC',
    'A',
    'B',
    'C4', # flake8-comprehensions
    'C90', # mccabe
    'DTZ',
    'EM',
    'FBT',
    'I',
    'ISC',
    'N',
    'PIE',
    'PLC',
    'PLE',
    'PLR',
    'PLR1730', # preview: if-stmt-min-max
    'PLR1733', # preview: unnecessary-dict-index-lookup
    'PLR6301', # preview: no-self-use
    'PLW',
    'PLW0211', # preview: bad-staticmethod-argument
    'PTH',
    'RET',
    'RSE',
    'RUF',
    'RUF022', # preview: unsorted-dunder-all
    'RUF023', # preview: unsorted-dunder-slots
    'RUF027', # preview: missing-f-string-syntax
    'S',
    'SIM',
    'T10',
    'T20',
    'TCH',
    'TRY',
    'UP',
    'UP042', # preview: replace-str-enum
    'YTT',
]

ignore = [
    'A003', # I don't think this is a big deal
    'ISC001', # Redundant with formatter
    'PLC0414', # Conflicts with F401 fix
    'S311', # I'm not using random for crypto...
    'SIM108', # This rule is a bit too eager
]

extend-safe-fixes = ['F401', 'I', 'RET', 'RUF005', 'RUF013', 'SIM', 'TCH', 'UP']

[tool.ruff.lint.per-file-ignores]
'test_*.py' = ['ANN', 'S101']

# There are no secret tokens here, Bandit
'feature/markov.py' = ['S105', 'S106', 'S107']

[tool.ruff.lint.isort]
required-imports = ['from __future__ import annotations']

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ['id']

[tool.ruff.lint.pylint]
max-args = 8 # Includes `self`, annoyingly

[tool.pytest.ini_options]
minversion = '6.0'
testpaths = ['tests']
addopts = ['-ra']
