[metadata]
name = ZeroBot
version = attr: ZeroBot.__version__
description = A modular, multi-protocol bot for amusement and utility.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ZeroKnight/ZeroBot
author = Alex "ZeroKnight" George
author_email = xzeroknightx@gmail.com
license = MIT
license_file = LICENSE

[options]
packages = find:
install_requires =
    aiosqlite
    appdirs
    discord.py>=1.5.0
    pydle>=0.9.4
    python-dateutil
    toml
python_requires = >=3.8

[options.packages.find]
exclude = tests*

[options.entry_points]
console_scripts =
    zerobot = ZeroBot.__main__:main
